# Gestion-administrative

./: .env.example  .env.test  .flaskenv  .gitignore  .replit  backup_data.sql  dev_dump.sql  dump.sql  import_prod_data_final.sh  init_dev_db.py  main.py  models.py  pyproject.toml  run.py  sauvegarde_prod_avant_migration.dump  schema.sql  users.md
docs/: users.md
migrations/versions/: 82fb11542554_initial_schema_creation.py
mon_application/: __init__.py  admin.py  api.py  auth.py  commands.py  dashboard.py  database.py  exports.py  extensions.py  models.py  readme.txt  services.py  utils.py  views.py
mon_application/static/css/: style.css
mon_application/static/js/: administration_donnees.js  administration_utilisateurs.js  detail_taches.js  page_champ.js  page_sommaire.js  preparation_horaire.js
mon_application/templates/: _layout.html  administration_donnees.html  administration_utilisateurs.html  detail_taches.html  index.html  indexnew.html  login.html  page_champ.html  page_sommaire.html  preparation_horaire.html  register.html
static/css/: style.css
static/js/: page_champ.js
templates/: administration_donnees.html  administration_utilisateurs.html  index.html  login.html  page_champ.html  page_sommaire.html  reassigner_cours.html  register.html
tests/: conftest.py  test_admin.py  test_api.py  test_auth.py  test_factory.py  test_services.py
