# pyproject.toml

[project]
name = "gestion-taches-enseignants"
version = "0.1.0"
description = "Une application Flask pour la gestion des tâches d'enseignement."
authors = [
    {name = "Votre Nom", email = "vous@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "psycopg2-binary>=2.9.9",
    "openpyxl>=3.1.0",
    "Flask-Login>=0.6.3", 
    "werkzeug>=3.0.0",
    # --- AJOUTS POUR L'ORM ET LES MIGRATIONS ---
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.29",
    "flask-migrate>=4.0.7",
    # --- AJOUT POUR LES FORMULAIRES ET CSRF ---
    "flask-wtf>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
]

# --- Configuration de Ruff (Linter et Formateur) ---
[tool.ruff]
src = ["."]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]
line-length = 200
target-version = "py311"

# --- Configuration du Linter de Ruff ([tool.ruff.lint]) ---
[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

# --- Configuration du Formateur de Ruff ([tool.ruff.format]) ---
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Configuration de Setuptools ---
[tool.setuptools.packages.find]
where = ["."]
exclude = ["uploads*", "tests*", "migrations*"]

# --- AJOUT CRUCIAL ---
[tool.setuptools.package-data]
mon_application = ["templates/**", "static/**"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = "."